--- a/Copy_of_Python_2_0_basics.ipynb
+++ b/Copy_of_Python_2_0_basics.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPpHsFrymZGisJn4EBXeerV",
+      "authorship_tag": "ABX9TyP4HdFre8B3V0noibTrYMEK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -500,12 +500,111 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "x=int(input (\"enter your amount \"))\n",
+        "if x>250000:\n",
+        "   print((x-250000)*10/100)\n",
+        "   print(\"you are taxable\")\n",
+        "if x<250000:\n",
+        "   Print ((x-250000)*10/100)\n",
+        "   Print(\"you are not taxable\")"
+      ],
       "metadata": {
-        "id": "ul1bPb9_Re-a"
+        "id": "ul1bPb9_Re-a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bf4bab45-ea5e-4c8d-d3fd-837999adde29"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter your amount 300000\n",
+            "5000.0\n",
+            "you are taxable\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x=int(input (\"enter your amount \"))\n",
+        "if x>400000:\n",
+        "   print((x-400000)*10/100)\n",
+        "   print(\"you are taxable\")\n",
+        "if x<4000000:\n",
+        "   Print ((x-4000000)*10/100)\n",
+        "   Print(\"you are not taxable\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 426
+        },
+        "id": "bzqUYYvPGZ5O",
+        "outputId": "09f99eb3-b3bd-408e-cd5d-cc01fa9ca423"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter your amount 600000\n",
+            "20000.0\n",
+            "you are taxable\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-12-c0a5e30106cd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m    \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"you are taxable\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m<\u001b[0m\u001b[0;36m4000000\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m    \u001b[0mPrint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m4000000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m    \u001b[0mPrint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"you are not taxable\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'Print' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x =int(input(\"enter return\"))\n",
+        "if x>250000 and x<500000:\n",
+        "    print((x-50000)*10/100)\n",
+        "    print (\"taxable\")\n",
+        "if x<250000:\n",
+        "    print((x-250000)*10/100)\n",
+        "    print (\"non taxable\")\n",
+        "if x>500000:\n",
+        "    print((500000-250000)*10/100+(x-500000)*20/100)\n",
+        "print (\"taxable \")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yaVOT3bvPh_C",
+        "outputId": "6701fe92-9cfb-4b2f-8fbc-8090d5f79d24"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter return800000\n",
+            "85000.0\n",
+            "taxable \n"
+          ]
+        }
+      ]
     }
   ]
 }
